...
                                  child: Opacity(
                                    opacity:
                                        _currentPage == 1 || _currentPage == 2
                                        ? 0.0
                                        : 1.0,
                                    child: const Text(
                                      'LANJUT',
                                      style: TextStyle(
                                        color: Color(0xFFC94B3D),
                                        fontWeight: FontWeight.bold,
                                        letterSpacing: 1.2,
                                      ),
                                    ),
...
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(22),
                  ),
                ),
                onPressed: _finishOnboarding,
                child: const Text(
                  'Masuk ke Beranda',
                  style: TextStyle(fontWeight: FontWeight.bold, fontSize: 16),
                ),
              ),
            ],
          ),
        ),
...
